🚨 FINAL FINAL FIX: Remove ALL edge function calls
- Fixed RobustWaitlistModal.tsx fallback to use direct database insert
- Fixed SimpleWaitlistForm.tsx to use direct database insert
- NO MORE EDGE FUNCTION CALLS ANYWHERE
- ALL waitlist components now use status 'pending' with fallback logic
- This should DEFINITIVELY fix the waitlist on www.eterna.chat

EVERY SINGLE WAITLIST COMPONENT IS NOW FIXED!

--- a/test-live-site-now.html
+++ b/test-live-site-now.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Live Site Deployment</title>
+    <title>Test Live Site Right Now</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
         body { font-family: Arial, sans-serif; max-width: 600px; margin: 50px auto; padding: 20px; }
@@ -17,8 +17,8 @@
     </style>
 </head>
 <body>
-    <h1>🧪 Test Live Site Deployment</h1>
-    <p>This tests if the waitlist fix is deployed on www.eterna.chat</p>
+    <h1>🧪 Test Live Site Right Now</h1>
+    <p>This tests the current waitlist functionality on www.eterna.chat</p>
     
     <form id="testForm">
         <div class="form-group">
